syntax = "proto3";

service Catalog {
	rpc GetItemById(CatalogItemByIdRequest) returns (CatalogItemResponse);
}

message CatalogItemByIdRequest {
	string id = 1;
}

message CatalogItemResponse {
	string id = 1;
	string name = 2;
	string description = 3;
	double price = 4;
	int32 availableStock = 5;
	string pictureUri = 6;
}
